@@ -5,6 +5,7 @@ next:
          - add check_os_updates
          - check_files: fix skipping folder to early
          - check_eventlog: fix using event id
+         - fix wrapped scripts not found
 
 0.18     Wed Feb 14 15:36:38 CET 2024
          - fix crash on windows when parsing empty args (#88)
